[gd_scene load_steps=12 format=3 uid="uid://cetve04alweft"]

[ext_resource type="Script" path="res://ui/LevelGrid/LevelGrid.gd" id="1_26pjl"]
[ext_resource type="Texture2D" uid="uid://0nk57el53xc8" path="res://Art/ui/LevelButtons/ui_button_1.png" id="1_o8pi4"]
[ext_resource type="Texture2D" uid="uid://ckw184w3d6nub" path="res://Art/ui/LevelButtons/ui_button_2.png" id="2_o75md"]
[ext_resource type="Texture2D" uid="uid://c4mqbfy12djaq" path="res://Art/ui/LevelButtons/ui_button_3.png" id="3_c488b"]
[ext_resource type="Texture2D" uid="uid://rwmk4p4mi6dy" path="res://Art/ui/LevelButtons/ui_button_4.png" id="4_c0rmn"]
[ext_resource type="Texture2D" uid="uid://dq12iy0n3n1gi" path="res://Art/ui/LevelButtons/ui_button_5.png" id="5_6xfo3"]
[ext_resource type="Texture2D" uid="uid://bp628nn0jpu3m" path="res://Art/ui/LevelButtons/ui_button_6.png" id="6_cuvfy"]
[ext_resource type="Texture2D" uid="uid://cn86lvc3snvo0" path="res://Art/ui/LevelButtons/ui_button_7.png" id="7_e5712"]
[ext_resource type="Texture2D" uid="uid://d3ns3c8ompn2x" path="res://Art/ui/LevelButtons/ui_button_locked.png" id="8_3i317"]
[ext_resource type="Texture2D" uid="uid://cxow75ndeg8aj" path="res://Art/ui/LevelButtons/ui_button_8.png" id="8_c15u4"]
[ext_resource type="PackedScene" uid="uid://dckvjxjre1ypi" path="res://Util/Transitions/BlackTransition/BlackTransition.tscn" id="11_onhyb"]

[node name="LevelGrid" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -780.0
offset_bottom = -276.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_26pjl")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 0
offset_right = 3351.0
offset_bottom = 3351.0
columns = 3

[node name="Level1" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("1_o8pi4")

[node name="Level2" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("2_o75md")

[node name="Level3" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("3_c488b")

[node name="Level4" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("4_c0rmn")

[node name="Level5" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("5_6xfo3")

[node name="Level6" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("6_cuvfy")

[node name="Level7" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("7_e5712")

[node name="Level8" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("8_c15u4")

[node name="Level9" type="TextureButton" parent="GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture_normal = ExtResource("8_3i317")

[node name="BlackTransition" parent="." instance=ExtResource("11_onhyb")]
layout_mode = 1

[connection signal="pressed" from="GridContainer/Level1" to="." method="_on_level_1_pressed"]
[connection signal="pressed" from="GridContainer/Level2" to="." method="_on_level_2_pressed"]
[connection signal="pressed" from="GridContainer/Level3" to="." method="_on_level_3_pressed"]
[connection signal="pressed" from="GridContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="GridContainer/Level5" to="." method="_on_level_5_pressed"]
[connection signal="pressed" from="GridContainer/Level6" to="." method="_on_level_6_pressed"]
[connection signal="pressed" from="GridContainer/Level7" to="." method="_on_level_7_pressed"]
[connection signal="pressed" from="GridContainer/Level8" to="." method="_on_level_8_pressed"]
[connection signal="pressed" from="GridContainer/Level9" to="." method="_on_level_9_pressed"]
